--- a/mobile2/pubspec.yaml
+++ b/mobile2/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   http: ^1.2.1
   shared_preferences: ^2.2.2
+  charts_flutter_new: ^0.12.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
