--- a/mobile2/pubspec.yaml
+++ b/mobile2/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   http: ^1.2.1
   shared_preferences: ^2.2.2
   charts_flutter_new: ^0.12.0
+  fl_chart: ^0.64.0
+  intl: 0.17.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
