--- a/mobile2/pubspec.yaml
+++ b/mobile2/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   charts_flutter_new: ^0.12.0
   fl_chart: ^0.64.0
   intl: 0.17.0
+  image_picker: ^0.8.5+3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
